--- a/src/components/LoyaltyCard.css
+++ b/src/components/LoyaltyCard.css
@@ -1,7 +1,7 @@
 .loyalty-card {
   border-radius: 20px;
   padding: 10px;
-  margin: 10px 0;
+  margin: 5px 0;
   text-align: left;
 }
 
@@ -22,6 +22,7 @@
 .progress {
   height: 10px;
   background-color: #0d3dd7;
+  transition: width 0.5s ease-in-out;
 }
 
 .card-buttons {
