--- a/src/components/RewardsList.css
+++ b/src/components/RewardsList.css
@@ -1,42 +1,67 @@
 .rewards-list {
   border-radius: 20px;
-  padding-top: 10px;
+  text-align: left;
   margin: 10px;
 }
 
 .rewards-container {
   display: flex;
   overflow-x: scroll;
-  gap: 10px;
-  padding-bottom: 10px;
+  gap: 20px;
+  padding: 20px 0;
 }
 
 .reward-item {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
-  padding: 20px;
+  align-items: stretch;
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-  min-width: 200px;
-  height: 250px;
+  min-width: 250px;
+  height: 300px;
   color: #fff;
   position: relative;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+}
+
+.reward-item:hover {
+  transform: translateY(-5px);
 }
 
 .reward-content {
   color: white;
-  background-color: rgba(128, 128, 128, 0.518);
-  padding: 10px;
-  border-radius: 10px;
+  padding: 10px 15px;
   width: 100%;
   text-align: left;
+  position: relative;
+  z-index: 2;
+  max-height: 120px; /* Adjust this value as needed */
+  box-sizing: border-box;
 }
 
-.reward-item.available {
-  
+.reward-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: inherit;
+  backdrop-filter: blur(5px) brightness(1);
+  z-index: -1;
+}
+
+.reward-item span {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.reward-item span:first-child {
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
 .btn-claim {
@@ -44,7 +69,13 @@
   color: #fff;
   border: none;
   border-radius: 20px;
-  padding: 5px 10px;
+  padding: 10px 15px;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 0px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.btn-claim:hover {
+  background-color: #0a2eb3;
 }
