--- a/src/components/RewardsList.css
+++ b/src/components/RewardsList.css
@@ -8,7 +8,7 @@
   display: flex;
   overflow-x: scroll;
   gap: 20px;
-  padding: 20px 0;
+  padding: 0px;
 }
 
 .reward-item {
@@ -28,7 +28,7 @@
 }
 
 .reward-item:hover {
-  transform: translateY(-5px);
+  /*transform: translateY(-5px);*/
 }
 
 .reward-content {
