Changed BG Color

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color: hsl(167, 73%, 85%);
+  background-color: #e5d7b0;
   padding-bottom: 50px;
   padding-left: 15px;
   padding-right: 15px;
