--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,7 +9,7 @@
     top: 0;
     left: 0;
     width: 94%;
-    background-color: hsl(167, 73%, 85%); /* or any color you prefer */
+    background-color: #e5d7b0; /* or any color you prefer */
     z-index: 1000; /* ensures the header stays on top of other elements */
   }
   
